# DAA

./: CMakeLists.txt  DFS_BFS.c  Index.csv  Knapsack_using_Greedy_Approach.c  Kurskals_Algorithm.c  Max_Min_using_Divide_Conquer.c  Merge_Sort.c  Merge_using_Divide_Conquer.c  Prims_Algorithm.c  README.md
